--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
